frontend/test/should_pass/map_007.grg
using map_model_001;

rule assignMapToMap {
	a:A -e:E-> a; 
		
	modify {
		eval {
			a.niceMap = e.niceMap;
			e.spiceMap = a.spiceMap;
			e.niceMap = a.niceMap;
		}
	}
}