frontend/test/should_fail/map_011.grg
using map_model_001;

rule assignWrongType {
	a:A;

	modify {
		eval {
			a.intToString = a.intToString | { 5->a.intValue }; // no implicit cast without the type prefix
		}
	}
}
